--- a/web/paginas/Login.html
+++ b/web/paginas/Login.html
@@ -14,7 +14,7 @@
     <div id="boasVindas">
         <div id="mensagem">
             <div id="tituloMensagem">
-                <h1>Bem-Vindo de Volta!</h1>
+                <h1 id="WelcomeCadastro1">Bem-Vindo de Volta!</h1>
                 <div id="textoMensagem">
                     <p>Acesse sua conta e continue sua jornada pelo conhecimento</p>
                 </div>
@@ -54,7 +54,7 @@
                     <div class="buttonContainer">
                         <div class="button" id="buttonLogin">
                             <div class="icon">
-                                <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor"
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
                                     class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
                                         d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0z" />
@@ -68,12 +68,12 @@
                             </div>
                         </div>
                     </div>
-                   
+
                 </form>
-                 <div id="cadastrar">
-                        <p>Ainda não possui um cadastro?</p>
-                        <a href="Cadastro.html">Cadastre-se</a>
-                    </div>
+                <div id="cadastrar">
+                    <p>Ainda não possui um cadastro?</p>
+                    <a href="Cadastro.html">Cadastre-se</a>
+                </div>
             </div>
         </div>
     </div>
