front end geral

--- a/web/paginas/Index.html
+++ b/web/paginas/Index.html
@@ -34,7 +34,7 @@
                     </svg>
                     <p>Home</p>
                 </a>
-                <a href="" class="navItem">
+                <a href="Acervo.html" class="navItem">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="43"
                         height="43" viewBox="0 0 43 43" fill="none">
                         <rect width="43" height="43" fill="url(#pattern0_82_98)" />
@@ -56,7 +56,7 @@
                     </svg>
                     <p>Fórum</p>
                 </a>
-                <a href="" class="navItem">
+                <a href="Eventos.html" class="navItem">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="36"
                         height="36" viewBox="0 0 36 36" fill="none">
                         <rect width="33" height="33" fill="url(#pattern0_1_80)" />
